# vite-tauri-template

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vue.config.js
.github/workflows/: release.yml  rust.yml
src/: App.vue  app.vue  main.js  routes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: main.css
src/components/: ColorChecker.vue  Counter.vue  DarkModeToggle.vue  Requester.vue  banner.vue  color-checker.vue  requester.vue  slide-show.vue  trending.vue
src/modules/counter/: mod.vue
src/modules/fetcher/: mod.vue
src/pages/about/: AboutUsPage.vue  about-page.vue  about-us-page.vue
src/pages/anime/: info-page.vue
src/pages/contact/: list-page.vue
src/pages/error/: error-page.vue
src/pages/home/: HomePage.vue  home-page.vue
src/pages/watch/: watch-page.vue
src/plugins/: configure-ynetwork.js  request.js  unified-app.js  vuetify.js
src/plugins/unified/: unified-app.js
src/services/: http.js
